Add shorturl to start slide

--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
             <i class="fa fa-google-plus"></i> <a class="iconned" rel="me" href="https://plus.google.com/+JustinRibeiro/posts"> +Justin Ribeiro</a>
             <i class="fa fa-github"></i> <a class="iconned" rel="me" href="https://github.com/justinribeiro"> justinribeiro</a>
           </p>
+          <p>
+            Slides: <a href="https://goo.gl/dsbkIQ" title="short url to these slides">https://goo.gl/dsbkIQ</a>
+          </p>
+
 				</section>
 
 				<section>
